--- a/index.html
+++ b/index.html
@@ -442,15 +442,15 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <span>📧</span>
-                    <span>info@kilalpedia.com</span>
+                    <span>stokkilalnew@gmail.com</span>
                 </div>
                 <div class="contact-item">
                     <span>📱</span>
-                    <span>+62 812-3456-7890</span>
+                    <span>+62 821-1729-5900</span>
                 </div>
                 <div class="contact-item">
                     <span>💬</span>
-                    <span>WhatsApp: +62 812-3456-7890</span>
+                    <span>WhatsApp: +62 821-1729-5900</span>
                 </div>
             </div>
         </div>
@@ -458,7 +458,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 KILALPEDIA. Semua hak dilindungi.</p>
+            <p>&copy; 2025 KILALPEDIA. Semua hak dilindungi.</p>
         </div>
     </footer>
 
